--- a/public/front/css/styles.css
+++ b/public/front/css/styles.css
@@ -1493,11 +1493,14 @@ section.recently.portfolio {
 
 .homepage-1 .portfolio.full-l .project-head {
   border-radius: 3px 0 0 3px;
-  max-height: 270px;
   max-width: -webkit-fill-available;
   margin: 0;
   position: relative;
-  width: 410px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+
 }
 
 .homepage-1 .portfolio .homes-content .homes-list li i {
