--- a/public/front/css/styles.css
+++ b/public/front/css/styles.css
@@ -1492,10 +1492,10 @@ section.recently.portfolio {
 }
 
 .homepage-1 .portfolio.full-l .project-head {
-  border-radius: 3px 0 0 3px;
-  max-width: -webkit-fill-available;
-  margin: 0;
-  position: relative;
+    /* display: block;
+    width: 320px;
+    height: 240px;
+    background-image: url("https://source.unsplash.com/320x240/?sky") */
 }
 
 .homepage-1 .portfolio .homes-content .homes-list li i {
@@ -2680,10 +2680,6 @@ section.portfolio {
 .homes-img {
   position: relative;
   overflow: hidden;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 30vh;
 }
 
 .homes-tag.featured {
