--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -35314,6 +35314,19 @@ video {
 }
 
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+  }
+
+
 /*---End profile---*/
 
 
