add inventory page

--- a/public/userside/css/profolio4_28.css
+++ b/public/userside/css/profolio4_28.css
@@ -100,9 +100,8 @@
     padding: 0px 10px 6px 9px;
     box-sizing: border-box;
 }
-#mybayut_tabs li a:active{
-    text-decoration: none;
-    color: white !important;
+#mybayut_tabs #current{
+    color: #ffff;
 }
 
 #mybayut_tabs li a:hover {
