--- a/public/userside/css/add_property_single1_14.css
+++ b/public/userside/css/add_property_single1_14.css
@@ -195,7 +195,7 @@ a {
 .sb_combo {
     -moz-user-select: none;
     background-color: #ffffff;
-    border: 1px solid #cacaca;
+    border: none;
     border-radius: 5px;
     box-shadow: 0 1px 2px 2px #f4f4f4 inset;
     color: #737373;
@@ -226,7 +226,6 @@ a {
     color: #737373;
     font-size: 11px;
     height: 30px;
-    opacity: 0;
     outline: medium none;
     position: absolute;
     top: 0;
