change css styles in reports

--- a/public/userside/profolio/css/profolio_reports_css1_8.css
+++ b/public/userside/profolio/css/profolio_reports_css1_8.css
@@ -1,7 +1,7 @@
 /************ New Statistics Charts - Waqar *************/
 
 h3 {
-    color: #00a651;
+    color: #FF385C;
     margin: 0px;
     font-size: 14px;
 }
