--- a/public/userside/profolio/css/profolio_reports_css1_8.css
+++ b/public/userside/profolio/css/profolio_reports_css1_8.css
@@ -595,7 +595,7 @@ html* .scr_val u.fill {
 
 .box_heading {
     background: transparent;
-    background-color: #00a651;
+    background-color: ##FF385c;;
     clear: both;
     float: left;
     font-size: 10px;
@@ -604,7 +604,7 @@ html* .scr_val u.fill {
 
 .box_heading div {
     background: transparent;
-    background-color: #00a651;
+    background-color: ##FF385c;;
     color: #FFFFFF;
     margin: 0 0 0 10px;
 }
@@ -639,7 +639,7 @@ html* .scr_val u.fill {
 
 #statistics_graph .box_heading_selected div {
     background: transparent;
-    background-color: #00a651;
+    background-color: #FF385c;
     color: white;
     float: left;
     font-weight: normal;
@@ -658,7 +658,7 @@ html* .scr_val u.fill {
     line-height: 16px;
     font-family: Arial, sans-serif;
     letter-spacing: 0px;
-    color: #00A651;
+    color: ##FF385c;;
     opacity: 1;
 }
 
