chnag password and edit page in post listing

--- a/public/userside/css/profolio_v2.css
+++ b/public/userside/css/profolio_v2.css
@@ -354,11 +354,11 @@ body {
     border-radius: 6px;
 }
 
-input,
+/* input,
 select,
 textarea {
-    border-radius: 4px;
-}
+    border-radius: 1px;
+} */
 
 .radius-4p {
     border-radius: 4px;
