tools module competed

--- a/public/front/css/maps.css
+++ b/public/front/css/maps.css
@@ -2135,7 +2135,7 @@ screen and (max-height:300px) {
 }
 .homepage-9 .sec-title h2 span {
     position: relative;
-    color: #444;
+    color: #33a137;;
     font-weight: 500;
 }
 .homepage-9 .sec-title p {
