--- a/public/front/css/styles.css
+++ b/public/front/css/styles.css
@@ -10636,29 +10636,27 @@ a.button {
     background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../images/bg/bg-15.jpg") no-repeat center top;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/bg/bg-15.jpg") no-repeat center top;
     background-size: cover;
-    background-attachment: fixed !important;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
 }
 
 .parallax-searchs.home15.thome-6 {
     background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../images/bg/thome-6.jpg) no-repeat center top;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/bg/thome-6.jpg) no-repeat center top;
     background-size: cover;
-    background-attachment: fixed !important;
     width: 100%;
-    height: 95vh;
+    height: 100vh;
     position: relative;
     z-index: 99;
 }
 
 .parallax-searchs.thome-1 {
-    background: url(../images/bg/home-18.jpg) no-repeat center top !important;
-    background: url(../images/bg/home-18.jpg) no-repeat center top !important;
+    background: url(../images/bg/bgimage1.webp) no-repeat center top !important;
+    background: url(../images/bg/bgimage1.webp) no-repeat center top !important;
     background-size: cover;
-    background-attachment: fixed !important;
+    background-position: center;
     width: 100%;
-    height: 95vh;
+    height: 100vh;
 }
 
 .parallax-searchs.thome-11 {
